# stemplayer-js

./: stemplayer.js
demo/: frequency-colors.html  frequency-test.html  parity-test.html  single-wav-test.html
flutter_stem_player/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
flutter_stem_player/example/: pubspec.yaml
flutter_stem_player/example/lib/: main.dart
flutter_stem_player/lib/: flutter_stem_player.dart  main.dart  main_audio_file_view.dart
flutter_stem_player/lib/src/: audio_palette_service.dart
flutter_stem_player/lib/src/audio_file_view/: audio_file_view.dart  audio_file_view_exports.dart  audio_player_service.dart  catalog_view.dart  frequency_legend.dart  info_panel.dart  search_view.dart  spectral_waveform_view.dart  toast_notification.dart  transport_bar.dart
flutter_stem_player/lib/src/models/: stem.dart
flutter_stem_player/lib/src/painters/: waveform_painter.dart
flutter_stem_player/macos/: Podfile
flutter_stem_player/macos/Runner.xcodeproj/: project.pbxproj
flutter_stem_player/rust/: Cargo.toml
flutter_stem_player/rust/src/: api.rs  audio.rs  frb_generated.rs  lib.rs
flutter_stem_player/rust/src/database/: mod.rs
flutter_stem_player/rust/src/fingerprint/: mfcc.rs  mod.rs  spectral.rs
flutter_stem_player/rust/src/midi/: mod.rs
flutter_stem_player/rust/src/search/: mod.rs
flutter_stem_player/scripts/: build_rust.sh
flutter_stem_player/test/: widget_test.dart
src/: FrequencyWaveform.js  Row.js  StemPlayer.js  StemPlayerControls.js  StemPlayerStem.js  config.js
src/lib/: fft.js
(+15 files in other folders)
