[package]
name = "audio_palette"
version = "0.1.0"
edition = "2021"
description = "Rust audio analysis library for Flutter - fingerprinting, similarity search, MIDI export"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Audio analysis
rustfft = "6.1"
hound = "3.5"              # WAV reading
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# MIDI export
midly = "0.5"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
rayon = "1.8"              # Parallel processing

[profile.release]
lto = true
opt-level = 3
